--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,20 +3,12 @@
 ### by virtualanup ###
 ######################
 
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
-
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
