--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,10 @@ set -sg escape-time 1
 
 set -g mouse on
 # to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
+
+# Default shell
+set-option -g default-shell $SHELL
+
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 ######################
 ### DESIGN CHANGES ###
