--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,24 +10,59 @@ bind r source-file ~/.tmux.conf
 set -g base-index 1
 setw -g pane-base-index 1
 
-# switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-# No escape time
-set -sg escape-time 1
-
-set -g mouse on
-# to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
-
 # Default shell
 set-option -g default-shell $SHELL
 
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
 ######################
-### DESIGN CHANGES ###
+###  Key bindings  ###
+######################
+
+# Set vi mode.
+set-window-option -g mode-keys vi
+
+# No escape time
+set -sg escape-time 0
+
+# Split panes using Prefix + | and Prefix + -.
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Resize panes with M-arrows (1 cell at a time) and C-arrows (10 cells at a time).
+bind -n M-Left resize-pane -L
+bind -n M-Down resize-pane -D
+bind -n M-Up resize-pane -U
+bind -n M-Right resize-pane -R
+bind -n C-Left resize-pane -L 10
+bind -n C-Down resize-pane -D 10
+bind -n C-Up resize-pane -U 10
+bind -n C-Right resize-pane -R 10
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
+
+# Move windows using Shift-arrows.
+bind -n S-Left switch-window -t -1
+bind -n S-Right switch-window -t +1
+
+if-shell "tmux -V | grep -qiE '2\.[1-9]\d*|[3-9]\d*\.\d+'" 'set -g mouse on' 'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on'
+
+######################
+#       Design
 ######################
 
 # panes
@@ -75,22 +110,15 @@ set-option -g bell-action none
 
 set -g default-terminal "screen-256color"
 
-# The modes {
 setw -g clock-mode-colour colour135
 setw -g mode-attr bold
 setw -g mode-fg colour196
 setw -g mode-bg colour238
 
-# }
-# The panes {
-
 set -g pane-border-bg colour235
 set -g pane-border-fg colour238
 set -g pane-active-border-bg colour236
 set -g pane-active-border-fg colour51
-
-# }
-# The statusbar {
 
 set -g status-position bottom
 set -g status-bg colour234
@@ -115,11 +143,10 @@ setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
-# }
-# The messages {
-
 set -g message-attr bold
 set -g message-fg colour232
 set -g message-bg colour166
 
-# }
+# Use lighter background for inactive panes
+set -g window-style 'fg=colour247,bg=colour234'
+set -g window-active-style 'fg=colour250,bg=black'
