--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,8 +56,8 @@ bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
 
 # Move windows using Shift-arrows.
-bind -n S-Left switch-window -t -1
-bind -n S-Right switch-window -t +1
+#bind -n S-Left switch-window -t -1
+#bind -n S-Right switch-window -t +1
 
 if-shell "tmux -V | grep -qiE '2\.[1-9]\d*|[3-9]\d*\.\d+'" 'set -g mouse on' 'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on'
 
