--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,10 +63,6 @@ if-shell "tmux -V | grep -qiE '2\.[1-9]\d*|[3-9]\d*\.\d+'" 'set -g mouse on' 'se
 #       Design
 ######################
 
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
-
 ## Status bar design
 # status line
 set -g status-justify left
@@ -75,23 +71,19 @@ set -g status-fg colour12
 set -g status-interval 2
 
 # messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
+set -g message-style fg=black,bg=yellow
+set -g message-command-style fg=blue,bg=black
 
 #window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -g mode-style bg=colour6,fg=colour0
 
 # window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
+set-window-option -g window-status-format " #F#I:#W#F "
+set-window-option -g window-status-current-format " #F#I:#W#F "
+set-window-option -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+set-window-option -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+
+set-window-option -g window-status-current-style  bg=colour0,fg=colour11,attr=dim
 setw -g window-status-bg green
 setw -g window-status-fg black
 setw -g window-status-attr reverse
@@ -108,13 +100,10 @@ set-option -g bell-action none
 
 set -g default-terminal "screen-256color"
 
-setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+set-window-option -g clock-mode-colour colour135
+set-window-option -g mode-style attr=bold,fg=colour196,bg=colour238
 
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
+set -g pane-border-style bg=colour235,fg=colour238
 set -g pane-active-border-bg colour236
 set -g pane-active-border-fg colour51
 
